# ShmoCodebase

./: .gitignore  CMakeLists.txt
include/shmo/: allocator.h  app.h  arena.h  base.h  darray.h  errors.h  free_list_arena.h  linear_algebra.h  linear_arena.h  memory.h  queue.h  set.h  stack.h  strings.h  table.h  user_input.h  window.h
src/: allocator.c  app.c  arena.c  base.c  darray.c  errors.c  free_list_arena.c  linear_algebra.c  linear_arena.c  main.c  memory.c  queue.c  set.c  stack.c  strings.c  table.c  user_input.c  window.c
src/sandbox/: main.c
